fixing orElse comment